[tool.poetry]
name = "goit-pythonweb-hw-03"
version = "0.1.0"
description = "HW3"
authors = ["Sergii <kryvkosergii@gmail.com>"]
readme = "README.md"

packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.13"
jinja2 = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"